kustomize/frontend/frontend-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  labels:
    argocd.argoproj.io/managed-by: argocd
  name: frontent-api
spec: {}
status: {}
