kustomize/frontend/frontend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bookstore-frontend
  name: bookstore-frontend
  namespace: frontend-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-frontend
  strategy: {}
  template:
    metadata:
      labels:
        app: bookstore-frontend
    spec:
      containers:
      - image: docker.io/santoshdts/bookstore:main-ff2693ef-1674224585  # {"$imagepolicy": "flux-system:bookstore"}
        name: bookstore
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
        resources: {}
status: {}
