kustomize/frontend/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: frontend-api
  labels:
    app: bookstore-frontend
spec:
  type: NodePort
  ports:
    - port: 8080
      protocol: TCP
      nodePort: 31000
  selector:
    app: bookstore-frontend
