kustomize/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstore-ingress
  namespace: frontend-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - hosts: "app.santoshdts.com"
    http:
      paths:
      - pathType: Prefix
        path: "/books/*"
        backend:
          service:
            name: frontend-svc
            port:
              number: 8080
